--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
@@ -6,14 +6,20 @@ declare(strict_types=1);
 
 use Magento\Framework\View\Element\Template;
 
-$pageTitle = $block->getPage()?->getTitle();
-$pageContent = $block->getPage()?->getContent();
 ?>
 
 <article class="content-wrapper mx-auto">
-    <h1 class="mb-7 text-center text-4xl text-text-500" itemprop="headline"><?= $this->escapeHtml($pageTitle) ?></h1>
+  <h1
+    class="mb-7 text-center text-4xl text-text-500"
+    itemprop="headline"
+  >
+    <?= $block->getLayout()->getBlock('page.main.title')->getPageTitle() ?>
+  </h1>
 
-    <div class="rte animate-on-transition" itemprop="articleBody">
-        <?= $pageContent ?>
-    </div>
+  <div
+    class="rte animate-on-transition"
+    itemprop="articleBody"
+  >
+    <?= $block->getChildHtml('cms_page') ?>
+  </div>
 </article>
