INTERNAL-4: Fix content not rendering

--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/layout/cms_page_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/layout/cms_page_view.xml
@@ -7,6 +7,6 @@
         </referenceContainer>
 
         <move element="page.main.title" destination="cms_page_container" />
-        <move element="cms_page" destination="cms.page" />
+        <move element="cms_page" destination="cms_page_container" />
     </body>
 </page>
