--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default.xml
@@ -29,6 +29,10 @@
         <move element="columns" destination="preview.content" before="-"/>
         <!-- END: Wrap content within preview-content comment -->
 
+        <!-- Add h-full classes to columns and main -->
+        <referenceContainer name="columns" htmlTag="div" htmlClass="columns h-full"/>
+        <referenceContainer name="main" label="Main Content Container" htmlTag="div" htmlClass="column main h-full"/>
+
         <referenceContainer name="header.container" htmlClass="page-header contents"/>
         <referenceContainer name="page.wrapper" htmlClass="flex min-h-screen max-w-screen flex-col bg-bg-500">
             <container name="main.wrapper" as="main.wrapper" htmlTag="div" htmlClass="main-wrapper">
