--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/banner.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/banner.phtml
@@ -69,7 +69,7 @@ $height = $block->getVar('category_page_category_image/height');
       </div>
       <?php endif; ?>
     </div>
-    <div class="ml-8 md:pl-2">
+    <div class="ml-8 md:pl-2" x-data">
       <button
         type="button"
         class="button button--filled-primary hidden w-[275px] min-w-[275px] md:inline-flex"
